--- a/src/modules/commingSoon/commingsoon.scss
+++ b/src/modules/commingSoon/commingsoon.scss
@@ -28,9 +28,6 @@ p {
             @media (max-width: 1024px) {
                 padding: 0 40px;
             }
-            @media (max-width: 576px) {
-                padding: 0 20px;
-            }
             .hero-banner-first {
                 padding: 48px 0 135px 0;
                 .hero-banner-moon {
@@ -63,13 +60,16 @@ p {
                         align-items: center;
                         justify-content: center;
                         padding-top: 40px;
-                        @media (max-width: 1024px) {
-                            padding: 20px 40px 0 40px;
+                        @media (max-width: 576px) {
+                            display: block;
                         }
                         .authintication-box-input-flex {
                             width: 510px;
                             display: flex;
                             gap: 20px;
+                            @media (max-width: 576px) {
+                                width: 100%;
+                            }
                             .authintication-box-input-flex-input {
                                 width: 100%;
                                 input {
