--- a/src/modules/labResults/labresult.scss
+++ b/src/modules/labResults/labresult.scss
@@ -178,6 +178,7 @@ p {
         }
         .results-div {
             padding: 100px 0 265px 0;
+            background-color: #000000;
             @media (max-width: 576px) {
                 padding: 50px 0 100px 0;
             }
@@ -201,49 +202,64 @@ p {
                         border: 1px solid rgba(255, 255, 255, 0.4);
                         border-radius: 12px;
                         height: 100%;
-                        .results-div-grid1-button1,
-                        .results-div-grid1-button2,
-                        .results-div-grid1-button3 {
-                            display: flex;
-                            align-items: center;
-                            justify-content: center;
-                            padding-top: 55px;
-                            @media (max-width: 710px) {
-                                padding-top: 30px;
-                            }
-                            button {
-                                background: linear-gradient(
-                                    rgba(161, 108, 244, 1),
-                                    rgba(255, 125, 167, 1),
-                                    rgba(255, 171, 112, 1)
-                                );
-                                border: none;
-                                border-radius: 3px;
-                                width: 172px;
-                                padding: 10px 0;
-                                font-size: 16px;
-                                color: #ffffff;
-                                font-weight: 700;
-                                line-height: 21.82px;
-                                text-transform: uppercase;
+                        position: relative;
+                        &::after {
+                            position: absolute;
+                            content: "";
+                            left: -1%;
+                            bottom: -1%;
+                            height: 52%;
+                            width: 102%;
+                            background: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 1));
+                            z-index: 1;
+                        }
+                        .results-div-border {
+                            position: relative;
+                            z-index: 2;
+                            .results-div-grid1-button1,
+                            .results-div-grid1-button2,
+                            .results-div-grid1-button3 {
                                 display: flex;
                                 align-items: center;
                                 justify-content: center;
+                                padding-top: 55px;
+                                @media (max-width: 710px) {
+                                    padding-top: 30px;
+                                }
+                                button {
+                                    background: linear-gradient(
+                                        rgba(161, 108, 244, 1),
+                                        rgba(255, 125, 167, 1),
+                                        rgba(255, 171, 112, 1)
+                                    );
+                                    border: none;
+                                    border-radius: 3px;
+                                    width: 172px;
+                                    padding: 10px 0;
+                                    font-size: 16px;
+                                    color: #ffffff;
+                                    font-weight: 700;
+                                    line-height: 21.82px;
+                                    text-transform: uppercase;
+                                    display: flex;
+                                    align-items: center;
+                                    justify-content: center;
+                                }
                             }
-                        }
-                        .results-div-grid1-button2 {
-                            padding-top: 40px;
-                            button {
-                                background: rgba(255, 255, 255, 0.1);
+                            .results-div-grid1-button2 {
+                                padding-top: 40px;
+                                button {
+                                    background: rgba(255, 255, 255, 0.1);
+                                }
                             }
-                        }
-                        .results-div-grid1-button3 {
-                            padding-top: 40px;
-                            button {
-                                background: rgba(255, 255, 255, 0.1);
-                            }
-                            @media (max-width: 576px) {
-                                padding: 40px 0 30px 0;
+                            .results-div-grid1-button3 {
+                                padding-top: 40px;
+                                button {
+                                    background: rgba(255, 255, 255, 0.1);
+                                }
+                                @media (max-width: 576px) {
+                                    padding: 40px 0 30px 0;
+                                }
                             }
                         }
                     }
@@ -253,50 +269,65 @@ p {
                         border-radius: 12px;
                         height: calc(523px - 60px);
                         padding: 30px;
+                        position: relative;
+                        &::after {
+                            position: absolute;
+                            content: "";
+                            left: -1%;
+                            bottom: -1%;
+                            height: 52%;
+                            width: 102%;
+                            background: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 1));
+                            z-index: 1;
+                        }
                         @media (max-width: 880px) {
                             height: auto;
                         }
-                        .results-div-grid2-head {
-                            height: 37px;
-                            border-bottom: 1px dashed rgba(255, 255, 255, 0.4);
-                            h6 {
-                                font-size: 16px;
-                                color: #ffffff;
-                                font-weight: 700;
-                                line-height: 21.82px;
-                                text-align: left;
+                        .results-div-border {
+                            position: relative;
+                            z-index: 2;
+                            .results-div-grid2-head {
+                                height: 37px;
+                                border-bottom: 1px dashed rgba(255, 255, 255, 0.4);
+                                h6 {
+                                    font-size: 16px;
+                                    color: #ffffff;
+                                    font-weight: 700;
+                                    line-height: 21.82px;
+                                    text-align: left;
+                                }
+                                @media (max-width: 576px) {
+                                    display: flex;
+                                    justify-content: center;
+                                }
                             }
-                            @media (max-width: 576px) {
+                            .results-div-grid2-head-list {
+                                padding-top: 30px;
                                 display: flex;
-                                justify-content: center;
-                            }
-                        }
-                        .results-div-grid2-head-list {
-                            padding-top: 30px;
-                            display: flex;
-                            align-items: center;
-                            gap: 24px;
-                            flex-wrap: wrap;
-                            @media (max-width: 576px) {
-                                justify-content: center;
-                            }
-                            button {
-                                padding: 6px 16px;
-                                background: rgba(255, 255, 255, 0.12);
-                                border: none;
-                                border-radius: 38px;
-                                font-size: 14px;
-                                color: #ffffff;
-                                font-weight: 600;
-                                line-height: 19.1px;
-                                text-align: left;
-                                cursor: pointer;
-                                &:hover {
-                                    background: linear-gradient(
-                                        rgba(161, 108, 244, 0.5),
-                                        rgba(255, 125, 167, 0.5),
-                                        rgba(255, 171, 112, 0.5)
-                                    );
+                                align-items: center;
+                                gap: 24px;
+                                flex-wrap: wrap;
+                                @media (max-width: 576px) {
+                                    justify-content: center;
+                                }
+                                button {
+                                    padding: 6px 16px;
+                                    background: rgba(255, 255, 255, 0.12);
+                                    border: none;
+                                    border-radius: 38px;
+                                    font-size: 14px;
+                                    color: #ffffff;
+                                    font-weight: 600;
+                                    line-height: 19.1px;
+                                    text-align: left;
+                                    cursor: pointer;
+                                    &:hover {
+                                        background: linear-gradient(
+                                            rgba(161, 108, 244, 0.5),
+                                            rgba(255, 125, 167, 0.5),
+                                            rgba(255, 171, 112, 0.5)
+                                        );
+                                    }
                                 }
                             }
                         }
@@ -368,6 +399,15 @@ p {
                                 line-height: 22px;
                                 text-transform: uppercase;
                                 text-align: center;
+                                &:hover {
+                                    background: -webkit-linear-gradient(
+                                        rgba(161, 108, 244, 1),
+                                        rgba(255, 125, 167, 1),
+                                        rgba(255, 171, 112, 1)
+                                    );
+                                    background-clip: text;
+                                    -webkit-text-fill-color: transparent;
+                                }
                             }
                             @media (max-width: 1120px) {
                                 gap: 30px;
@@ -516,6 +556,7 @@ p {
             position: absolute;
             bottom: 0;
             left: 0;
+            // z-index: -1;
             img {
                 display: block;
                 @media (max-width: 576px) {
@@ -534,7 +575,7 @@ p {
                     height: 900px;
                 }
                 @media (max-width: 576px) {
-                    height: 780px;
+                    height: 900px;
                 }
             }
         }
