--- a/src/modules/productDetail1/productdetail1.scss
+++ b/src/modules/productDetail1/productdetail1.scss
@@ -32,6 +32,9 @@ p {
     .header {
         padding: 50px 0 0 0;
         position: relative;
+        @media (max-width: 1024px) {
+            padding: 30px 0 0 0;
+        }
         .header-container {
             max-width: 950px;
             margin: 0 auto;
@@ -48,7 +51,6 @@ p {
                 padding: 15px 46px 15px 40px;
                 @media (max-width: 576px) {
                     padding: 15px;
-                    margin-top: 30px;
                 }
                 .header-div-flex {
                     display: flex;
@@ -114,6 +116,7 @@ p {
         }
     }
     .hero-banner {
+        position: relative;
         .hero-banner-head {
             display: flex;
             align-items: center;
@@ -237,7 +240,7 @@ p {
                 max-width: 1080px;
                 margin: 0 auto;
                 .collection-background-contant-new-head {
-                    padding: 0 0 80px 0;
+                    padding: 0 20px 80px 20px;
                     h2 {
                         font-size: 46px;
                         color: #ffffff;
@@ -272,11 +275,7 @@ p {
                         text-align: center;
                         max-width: 929px;
                         margin: 0 auto;
-                        @media (max-width: 1024px) {
-                            padding: 0 40px;
-                        }
                         @media (max-width: 576px) {
-                            padding: 0 20px;
                             font-size: 12px;
                             line-height: 20px;
                         }
@@ -312,7 +311,7 @@ p {
                 max-width: 1028px;
                 margin: 0 auto;
                 .collection-background-contant-detail-head {
-                    padding: 0 0 80px 0;
+                    padding: 0 20px 80px 20px;
                     h2 {
                         font-size: 46px;
                         color: #ffffff;
@@ -347,11 +346,7 @@ p {
                         text-align: center;
                         max-width: 929px;
                         margin: 0 auto;
-                        @media (max-width: 1024px) {
-                            padding: 0 40px;
-                        }
                         @media (max-width: 576px) {
-                            padding: 0 20px;
                             font-size: 12px;
                             line-height: 20px;
                         }
